WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64241
WebKit2 is leaking NSCursors created by leakNamedCursor
https://bugs.webkit.org/show_bug.cgi?id=64241
Summary
WebKit2 is leaking NSCursors created by leakNamedCursor
Anders Carlsson
Reported
2011-07-10 11:30:54 PDT
WebKit2 is leaking NSCursors created by leakNamedCursor
Attachments
Patch
(12.75 KB, patch)
2011-07-10 11:40 PDT
,
Anders Carlsson
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-07-10 11:40:04 PDT
Created
attachment 100233
[details]
Patch
Darin Adler
Comment 2
2011-07-10 12:41:42 PDT
Wouldn’t it be better to cache each of these NSCursor objects exactly once?
Darin Adler
Comment 3
2011-07-10 12:41:53 PDT
Except for the custom cursor one?
Anders Carlsson
Comment 4
2011-07-10 16:10:41 PDT
(In reply to
comment #2
)
> Wouldn’t it be better to cache each of these NSCursor objects exactly once?
We're already caching them in the Cursor singletons in WebKit1, and for WebKit2 that's what the forcing of platformCursor does. I don't like the idea of having three levels of caches for some Cursors (WKSI, CursorMac.mm and Cursor.cpp).
Darin Adler
Comment 5
2011-07-10 17:32:08 PDT
(In reply to
comment #4
)
> for WebKit2 that's what the forcing of platformCursor does
So I guess that’s the real fix. Not sure the rest of this patch was needed.
Anders Carlsson
Comment 6
2011-07-10 19:02:15 PDT
(In reply to
comment #5
)
> (In reply to
comment #4
) > > for WebKit2 that's what the forcing of platformCursor does > > So I guess that’s the real fix. Not sure the rest of this patch was needed.
Right. I figured I'd do that part anyway since I don't like having potential leaks present in the code. In the future I think we can get rid of the Cursor singletons and cache the underlying platform cursors instead.
Anders Carlsson
Comment 7
2011-07-10 19:08:47 PDT
Committed
r90705
: <
http://trac.webkit.org/changeset/90705
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug